--- a/football index.html
+++ b/football index.html
@@ -3,124 +3,149 @@
 <head>
   <meta charset="UTF-8">
   <title>Greatest Football Players</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background-color: #f9f9f9;
-      padding: 0;
-      margin: 0;
-    }
-    header {
-      background-color: #1e3d59;
-      color: white;
-      padding: 40px 20px;
-      text-align: center;
-    }
-    header h1 {
-      margin: 0;
-      font-size: 2.5em;
-    }
-    header p {
-      margin-top: 10px;
-      font-size: 1.2em;
-      color: #d0e1f9;
-    }
-    main {
-      padding: 20px;
-    }
-    h2 {
-      text-align: center;
-      color: #333;
-      margin-top: 40px;
-    }
-    table {
-      width: 100%;
-      border-collapse: collapse;
-      background-color: #fff;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
-      margin-top: 20px;
-    }
-    th, td {
-      padding: 12px 15px;
-      text-align: left;
-      border-bottom: 1px solid #ddd;
-    }
-    th {
-      background-color: #333;
-      color: white;
-    }
-    tr:hover {
-      background-color: #f1f1f1;
-    }
-    section {
-      margin-top: 30px;
-    }
-    section p {
-      font-size: 1.1em;
-      line-height: 1.6;
-      color: #333;
-    }
-    section p strong {
-      color: #1e3d59;
-    }
-  </style>
+  <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body>
+<body class="bg-gray-100 text-gray-800">
 
-<header>
-  <h1>🌟 Football Legends</h1>
-  <p>Celebrating the greatest football players of all time — past, present, and future</p>
-</header>
-<section>
-    <h2>⚽ Player Biographies</h2>
-    <p><strong>1. Lionel Messi:</strong> Widely considered the greatest footballer of all time. Known for his dribbling, playmaking, and record-breaking career at Barcelona. Won the World Cup in 2022 with Argentina.</p>
-    <p><strong>2. Cristiano Ronaldo:</strong> A goal machine with unmatched work ethic. Won titles in England, Spain, and Italy. Holds the record for most goals in UEFA Champions League history.</p>
-    <p><strong>3. Pelé:</strong> Brazilian icon who won three World Cups. Scored over 1,000 career goals. Helped make football a global sport.</p>
-    <p><strong>4. Diego Maradona:</strong> Argentine legend known for his creativity and the “Hand of God” goal. Carried Argentina to World Cup glory in 1986.</p>
-    <p><strong>5. Zinedine Zidane:</strong> Elegant French midfielder famous for his vision, technique, and World Cup win in 1998. Also a successful manager with Real Madrid.</p>
-    <p><strong>6. Kylian Mbappé:</strong> A new-generation superstar. Won the World Cup in 2018 at age 19. Known for his pace and finishing.</p>
-    <p><strong>7. Lamine Yamal:</strong> Barcelona’s young prodigy. Known for his maturity, dribbling, and vision at just 16 years old. A future star for Spain.</p>
-    <p><strong>8. George Best:</strong> Northern Irish magician. A Manchester United icon with breathtaking flair. Famous for his genius and charisma.</p>
-    <p><strong>9. Bobby Charlton:</strong> England’s 1966 World Cup hero. A midfielder with a powerful shot and great leadership. Manchester United legend.</p>
-    <p><strong>10. Kenny Dalglish:</strong> Scottish forward who became a Liverpool great. Known for his intelligence and clutch performances in big matches.</p>
-    <p><strong>11. Ryan Giggs:</strong> A consistent performer for Manchester United. Won 13 Premier League titles and dazzled on the wing for two decades.</p>
-    <p><strong>12. Thierry Henry:</strong> France’s silky striker. Arsenal’s all-time top scorer. Famous for his style, finesse, and vision on the pitch.</p>
-    <p><strong>13. Wayne Rooney:</strong> England and Manchester United’s top scorer. A fierce competitor with brilliant passing and finishing.</p>
+  <!-- Header -->
+  <header class="bg-blue-900 text-white py-10 text-center">
+    <h1 class="text-4xl font-bold">🌟 Football Legends</h1>
+    <p class="mt-2 text-lg">Celebrating the greatest football players of all time — past, present, and future</p>
+  </header>
+
+  <main class="max-w-6xl mx-auto px-4 py-8">
+ <!-- Bios Section -->
+ <section class="mt-12">
+    <h2 class="text-2xl font-semibold text-center mb-4">📖 Player Biographies</h2>
+    <div class="space-y-4 text-gray-700">
+      <p><strong>1. Lionel Messi:</strong> Creative genius. Record Ballon d’Or winner. Key to Argentina’s 2022 World Cup win.</p>
+      <p><strong>2. Cristiano Ronaldo:</strong> Legendary scorer. Played in top leagues. Known for discipline and athleticism.</p>
+      <p><strong>3. Pelé:</strong> Brazilian icon with 3 World Cups. Over 1,000 goals. Changed the game forever.</p>
+      <p><strong>4. Diego Maradona:</strong> Brilliant and bold. 1986 World Cup legend. One of the greatest dribblers ever.</p>
+      <p><strong>5. Zinedine Zidane:</strong> Calm, classy midfielder. World Cup champion and elite coach.</p>
+      <p><strong>6. Kylian Mbappé:</strong> Speed demon. Starred at the 2018 World Cup at just 19.</p>
+      <p><strong>7. Lamine Yamal:</strong> Spanish prodigy. Skillful and smart far beyond his age.</p>
+      <p><strong>8. George Best:</strong> A genius with flair. United’s most dazzling player of his era.</p>
+      <p><strong>9. Bobby Charlton:</strong> 1966 World Cup winner. Leader and goal-scoring midfielder.</p>
+      <p><strong>10. Kenny Dalglish:</strong> Scotland’s pride. Liverpool icon as both player and manager.</p>
+      <p><strong>11. Ryan Giggs:</strong> Speed, skill, and longevity. United’s most decorated star.</p>
+      <p><strong>12. Thierry Henry:</strong> Arsenal’s greatest. Graceful finisher and creative force.</p>
+      <p><strong>13. Wayne Rooney:</strong> Tough, tenacious, and talented. Scored screamers and broke records.</p>
+    </div>
   </section>
-</main>
-
-<main>
-  <h2>🌍 Greatest Football Players</h2>
-
-  <table>
-    <thead>
-      <tr>
-        <th>#</th>
-        <th>Player</th>
-        <th>Country</th>
-        <th>Notable Clubs</th>
-        <th>Why They're Great</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr><td>1</td><td><strong>Lionel Messi</strong></td><td>Argentina</td><td>Barcelona, PSG, Inter Miami</td><td>Record Ballon d'Or winner, creative genius</td></tr>
-      <tr><td>2</td><td><strong>Cristiano Ronaldo</strong></td><td>Portugal</td><td>Man United, Real Madrid, Juventus</td><td>All-time top scorer in UCL, incredible athlete</td></tr>
-      <tr><td>3</td><td><strong>Pelé</strong></td><td>Brazil</td><td>Santos, New York Cosmos</td><td>3-time World Cup winner, football icon</td></tr>
-      <tr><td>4</td><td><strong>Diego Maradona</strong></td><td>Argentina</td><td>Napoli, Barcelona</td><td>Legendary dribbler, 1986 World Cup hero</td></tr>
-      <tr><td>5</td><td><strong>Zinedine Zidane</strong></td><td>France</td><td>Juventus, Real Madrid</td><td>Midfield maestro, World Cup & Champions League winner</td></tr>
-      <tr><td>6</td><td><strong>Kylian Mbappé</strong></td><td>France</td><td>Monaco, PSG, Real Madrid*</td><td>Blazing speed, 2018 World Cup winner, future legend</td></tr>
-      <tr><td>7</td><td><strong>Lamine Yamal</strong></td><td>Spain</td><td>Barcelona</td><td>Youngest star in Spain’s history, incredible technical skill</td></tr>
-      <tr><td>8</td><td><strong>George Best</strong></td><td>Northern Ireland 🇬🇧</td><td>Manchester United</td><td>Dazzling winger with unmatched flair and creativity</td></tr>
-      <tr><td>9</td><td><strong>Bobby Charlton</strong></td><td>England 🇬🇧</td><td>Manchester United</td><td>1966 World Cup winner, known for thunderous long shots</td></tr>
-      <tr><td>10</td><td><strong>Kenny Dalglish</strong></td><td>Scotland 🇬🇧</td><td>Celtic, Liverpool</td><td>Key figure in Liverpool’s golden era, tactical brilliance</td></tr>
-      <tr><td>11</td><td><strong>Ryan Giggs</strong></td><td>Wales 🇬🇧</td><td>Manchester United</td><td>Most decorated British player, legendary winger</td></tr>
-      <tr><td>12</td><td><strong>Thierry Henry</strong></td><td>France</td><td>Arsenal, Barcelona</td><td>Arsenal’s all-time top scorer, pace and technique combined</td></tr>
-      <tr><td>13</td><td><strong>Wayne Rooney</strong></td><td>England 🇬🇧</td><td>Everton, Manchester United</td><td>Man United and England’s all-time top scorer</td></tr>
-    </tbody>
-  </table>
+    <!-- Table Title --><br>
 
 
-</main>
 
-</body>
-</html>
+    <h2 class="text-2xl font-semibold text-center mb-6">🌍 Greatest Football Players</h2>
+
+    <!-- Table -->
+    <div class="overflow-x-auto">
+      <table class="min-w-full bg-white rounded-xl shadow-md">
+        <thead>
+          <tr class="bg-blue-800 text-white text-left">
+            <th class="py-3 px-4">#</th>
+            <th class="py-3 px-4">Player</th>
+            <th class="py-3 px-4">Country</th>
+            <th class="py-3 px-4">Notable Clubs</th>
+            <th class="py-3 px-4">Why They're Great</th>
+          </tr>
+        </thead>
+        <tbody class="text-gray-700">
+          <tr class="border-b hover:bg-gray-100">
+            <td class="py-3 px-4">1</td>
+            <td class="py-3 px-4 font-bold">Lionel Messi</td>
+            <td class="py-3 px-4">Argentina</td>
+            <td class="py-3 px-4">Barcelona, PSG, Inter Miami</td>
+            <td class="py-3 px-4">Record Ballon d'Or winner, creative genius</td>
+          </tr>
+          <tr class="border-b hover:bg-gray-100">
+            <td class="py-3 px-4">2</td>
+            <td class="py-3 px-4 font-bold">Cristiano Ronaldo</td>
+            <td class="py-3 px-4">Portugal</td>
+            <td class="py-3 px-4">Man United, Real Madrid, Juventus</td>
+            <td class="py-3 px-4">All-time top scorer in UCL, incredible athlete</td>
+          </tr>
+          <tr class="border-b hover:bg-gray-100">
+            <td class="py-3 px-4">3</td>
+            <td class="py-3 px-4 font-bold">Pelé</td>
+            <td class="py-3 px-4">Brazil</td>
+            <td class="py-3 px-4">Santos, New York Cosmos</td>
+            <td class="py-3 px-4">3-time World Cup winner, football icon</td>
+          </tr>
+          <tr class="border-b hover:bg-gray-100">
+            <td class="py-3 px-4">4</td>
+            <td class="py-3 px-4 font-bold">Diego Maradona</td>
+            <td class="py-3 px-4">Argentina</td>
+            <td class="py-3 px-4">Napoli, Barcelona</td>
+            <td class="py-3 px-4">Legendary dribbler, 1986 World Cup hero</td>
+          </tr>
+          <tr class="border-b hover:bg-gray-100">
+            <td class="py-3 px-4">5</td>
+            <td class="py-3 px-4 font-bold">Zinedine Zidane</td>
+            <td class="py-3 px-4">France</td>
+            <td class="py-3 px-4">Juventus, Real Madrid</td>
+            <td class="py-3 px-4">Midfield maestro, World Cup & UCL winner</td>
+          </tr>
+          <tr class="border-b hover:bg-gray-100">
+            <td class="py-3 px-4">6</td>
+            <td class="py-3 px-4 font-bold">Kylian Mbappé</td>
+            <td class="py-3 px-4">France</td>
+            <td class="py-3 px-4">Monaco, PSG, Real Madrid*</td>
+            <td class="py-3 px-4">Blazing speed, 2018 World Cup winner</td>
+          </tr>
+          <tr class="border-b hover:bg-gray-100">
+            <td class="py-3 px-4">7</td>
+            <td class="py-3 px-4 font-bold">Lamine Yamal</td>
+            <td class="py-3 px-4">Spain</td>
+            <td class="py-3 px-4">Barcelona</td>
+            <td class="py-3 px-4">Youngest star with amazing dribbling</td>
+          </tr>
+          <tr class="border-b hover:bg-gray-100">
+            <td class="py-3 px-4">8</td>
+            <td class="py-3 px-4 font-bold">George Best</td>
+            <td class="py-3 px-4">Northern Ireland 🇬🇧</td>
+            <td class="py-3 px-4">Manchester United</td>
+            <td class="py-3 px-4">Unmatched flair and skill</td>
+          </tr>
+          <tr class="border-b hover:bg-gray-100">
+            <td class="py-3 px-4">9</td>
+            <td class="py-3 px-4 font-bold">Bobby Charlton</td>
+            <td class="py-3 px-4">England 🇬🇧</td>
+            <td class="py-3 px-4">Manchester United</td>
+            <td class="py-3 px-4">1966 World Cup winner, leadership</td>
+          </tr>
+          <tr class="border-b hover:bg-gray-100">
+            <td class="py-3 px-4">10</td>
+            <td class="py-3 px-4 font-bold">Kenny Dalglish</td>
+            <td class="py-3 px-4">Scotland 🇬🇧</td>
+            <td class="py-3 px-4">Celtic, Liverpool</td>
+            <td class="py-3 px-4">Liverpool legend with tactical mind</td>
+          </tr>
+          <tr class="border-b hover:bg-gray-100">
+            <td class="py-3 px-4">11</td>
+            <td class="py-3 px-4 font-bold">Ryan Giggs</td>
+            <td class="py-3 px-4">Wales 🇬🇧</td>
+            <td class="py-3 px-4">Manchester United</td>
+            <td class="py-3 px-4">Most decorated British player</td>
+          </tr>
+          <tr class="border-b hover:bg-gray-100">
+            <td class="py-3 px-4">12</td>
+            <td class="py-3 px-4 font-bold">Thierry Henry</td>
+            <td class="py-3 px-4">France</td>
+            <td class="py-3 px-4">Arsenal, Barcelona</td>
+            <td class="py-3 px-4">Silky striker, Arsenal's top scorer</td>
+          </tr>
+          <tr class="hover:bg-gray-100">
+            <td class="py-3 px-4">13</td>
+            <td class="py-3 px-4 font-bold">Wayne Rooney</td>
+            <td class="py-3 px-4">England 🇬🇧</td>
+            <td class="py-3 px-4">Everton, Manchester United</td>
+            <td class="py-3 px-4">Top scorer for club and country</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+<!-- Bios Section -->
+    
+    
