leo messi 1st updated

--- a/football index.html
+++ b/football index.html
@@ -54,7 +54,7 @@
         <tbody class="text-gray-700">
           <tr class="border-b hover:bg-gray-100">
             <td class="py-3 px-4">1</td>
-            <td class="py-3 px-4 font-bold">Lionel Messi</td>
+            <td class="py-3 px-4 font-bold">Leo Messi</td>
             <td class="py-3 px-4">Argentina</td>
             <td class="py-3 px-4">Barcelona, PSG, Inter Miami</td>
             <td class="py-3 px-4">Record Ballon d'Or winner, creative genius</td>
