completed cr7 page

--- a/FootballIndex.html
+++ b/FootballIndex.html
@@ -61,7 +61,7 @@
           </tr>
           <tr class="border-b hover:bg-gray-100">
             <td class="py-3 px-4">2</td>
-            <td class="py-3 px-4 font-bold">Cristiano Ronaldo</td>
+            <td class="py-3 px-4 font-bold"><a href="CristianoRonaldo.html">Cristiano Ronaldo</a></td>
             <td class="py-3 px-4">Portugal</td>
             <td class="py-3 px-4">Man United, Real Madrid, Juventus</td>
             <td class="py-3 px-4">All-time top scorer in UCL, incredible athlete</td>
