--- a/FootballIndex.html
+++ b/FootballIndex.html
@@ -68,7 +68,7 @@
           </tr>
           <tr class="border-b hover:bg-gray-100">
             <td class="py-3 px-4">3</td>
-            <td class="py-3 px-4 font-bold">Pelé</td>
+            <td class="py-3 px-4 font-bold"><a href="pele.html">Pele</a></td>
             <td class="py-3 px-4">Brazil</td>
             <td class="py-3 px-4">Santos, New York Cosmos</td>
             <td class="py-3 px-4">3-time World Cup winner, football icon</td>
