--- a/LionelMessi.html
+++ b/LionelMessi.html
@@ -137,8 +137,9 @@ Messi is renowned for:
       <li>Messi is a family man, with a close bond to his wife Antonella Roccuzzo, with whom he has three children: Thiago, Mateo, and Ciro.</li>
       <li>Messi is known for his charity work and founded the Leo Messi Foundation, which works to provide access to education and healthcare for vulnerable children.</li>
       <li>Despite his fame, Messi is very private about his personal life and stays largely out of the spotlight outside of football.</li>
-   </ul><a href="FootballIndex.html" class="back-link">← Back to Football Index</a> 
-
+   </ul> <div>
+      <img src="messi.png" height="300" width="300" style=" margin-left: 50px"></div>
+      <a href="FootballIndex.html" class="back-link">← Back to Football Index</a>
 
 
 
