--- a/CristianoRonaldo.html
+++ b/CristianoRonaldo.html
@@ -40,4 +40,6 @@ Cristiano Ronaldo is known for:
     <li>Has his own fashion brand, hotels, gyms, and museum</li>
     <li>First footballer to become a <b>billionaire</b></li>
     <li>One of the most followed people on social media 🌐</li>
-</ul>   <a href="FootballIndex.html" class="back-link">← Back to Football Index</a> 
+</ul>   
+<div><img  src="ronaldo.png" height="300" width="300" style=" margin-left: 50px"></div>
+<a href="FootballIndex.html" class="back-link">← Back to Football Index</a>
