--- a/FootballIndex.html
+++ b/FootballIndex.html
@@ -75,14 +75,14 @@
           </tr>
           <tr class="border-b hover:bg-gray-100">
             <td class="py-3 px-4">4</td>
-            <td class="py-3 px-4 font-bold">Diego Maradona</td>
+            <td class="py-3 px-4 font-bold"><a href="maradona.html">Diego Maradona</a></td>
             <td class="py-3 px-4">Argentina</td>
             <td class="py-3 px-4">Napoli, Barcelona</td>
             <td class="py-3 px-4">Legendary dribbler, 1986 World Cup hero</td>
           </tr>
           <tr class="border-b hover:bg-gray-100">
             <td class="py-3 px-4">5</td>
-            <td class="py-3 px-4 font-bold">Zinedine Zidane</td>
+            <td class="py-3 px-4 font-bold"><a href="Zidane.html">Zinedine Zidane</a></td>
             <td class="py-3 px-4">France</td>
             <td class="py-3 px-4">Juventus, Real Madrid</td>
             <td class="py-3 px-4">Midfield maestro, World Cup & UCL winner</td>
