--- a/Zidane.html
+++ b/Zidane.html
@@ -45,7 +45,7 @@
     <li>Highly successful coach with Real Madrid</li>
     <li>Nicknamed "Zizou"</li>
   </ul>
-<img src="zidane.png" height="400" width="300" style=" margin-left: 50px"><br>
+<img src="ZinedineZidane.png" height="400" width="300" style=" margin-left: 50px"><br>
 <a href="FootballIndex.html" class="back-link">← Back to Football Index</a>
 </body>
 </html>
