--- a/FootballIndex.html
+++ b/FootballIndex.html
@@ -89,21 +89,21 @@
           </tr>
           <tr class="border-b hover:bg-gray-100">
             <td class="py-3 px-4">6</td>
-            <td class="py-3 px-4 font-bold">Kylian Mbappé</td>
+            <td class="py-3 px-4 font-bold"><a href="KylianMbappé.html">Kylian Mbappé</a></td>
             <td class="py-3 px-4">France</td>
             <td class="py-3 px-4">Monaco, PSG, Real Madrid*</td>
             <td class="py-3 px-4">Blazing speed, 2018 World Cup winner</td>
           </tr>
           <tr class="border-b hover:bg-gray-100">
             <td class="py-3 px-4">7</td>
-            <td class="py-3 px-4 font-bold">Lamine Yamal</td>
+            <td class="py-3 px-4 font-bold"><a href="yamal.html">Lamine Yamal</a></td>
             <td class="py-3 px-4">Spain</td>
             <td class="py-3 px-4">Barcelona</td>
             <td class="py-3 px-4">Youngest star with amazing dribbling</td>
           </tr>
           <tr class="border-b hover:bg-gray-100">
             <td class="py-3 px-4">8</td>
-            <td class="py-3 px-4 font-bold">George Best</td>
+            <td class="py-3 px-4 font-bold"><a href="best.html">George Best</a></td>
             <td class="py-3 px-4">Northern Ireland 🇬🇧</td>
             <td class="py-3 px-4">Manchester United</td>
             <td class="py-3 px-4">Unmatched flair and skill</td>
