--- a/FootballIndex.html
+++ b/FootballIndex.html
@@ -110,14 +110,14 @@
           </tr>
           <tr class="border-b hover:bg-gray-100">
             <td class="py-3 px-4">9</td>
-            <td class="py-3 px-4 font-bold">Bobby Charlton</td>
+            <td class="py-3 px-4 font-bold"><a href="BobbyCharlton.html">Bobby Charlton</a></td>
             <td class="py-3 px-4">England 🇬🇧</td>
             <td class="py-3 px-4">Manchester United</td>
             <td class="py-3 px-4">1966 World Cup winner, leadership</td>
           </tr>
           <tr class="border-b hover:bg-gray-100">
             <td class="py-3 px-4">10</td>
-            <td class="py-3 px-4 font-bold">Kenny Dalglish</td>
+            <td class="py-3 px-4 font-bold"><a href="KennyDalglish.html">Kenny Dalglish</a></td>
             <td class="py-3 px-4">Scotland 🇬🇧</td>
             <td class="py-3 px-4">Celtic, Liverpool</td>
             <td class="py-3 px-4">Liverpool legend with tactical mind</td>
