--- a/FootballIndex.html
+++ b/FootballIndex.html
@@ -124,21 +124,21 @@
           </tr>
           <tr class="border-b hover:bg-gray-100">
             <td class="py-3 px-4">11</td>
-            <td class="py-3 px-4 font-bold">Ryan Giggs</td>
+            <td class="py-3 px-4 font-bold"><a href="RyanGiggs.html">Ryan Giggs</a></td>
             <td class="py-3 px-4">Wales 🇬🇧</td>
             <td class="py-3 px-4">Manchester United</td>
             <td class="py-3 px-4">Most decorated British player</td>
           </tr>
           <tr class="border-b hover:bg-gray-100">
             <td class="py-3 px-4">12</td>
-            <td class="py-3 px-4 font-bold">Thierry Henry</td>
+            <td class="py-3 px-4 font-bold"><a href="ThierryHenry.html">Thierry Henry</a></td>
             <td class="py-3 px-4">France</td>
             <td class="py-3 px-4">Arsenal, Barcelona</td>
             <td class="py-3 px-4">Silky striker, Arsenal's top scorer</td>
           </tr>
           <tr class="hover:bg-gray-100">
             <td class="py-3 px-4">13</td>
-            <td class="py-3 px-4 font-bold">Wayne Rooney</td>
+            <td class="py-3 px-4 font-bold"><a href="WayneRooney.html">Wayne Rooney</a></td>
             <td class="py-3 px-4">England 🇬🇧</td>
             <td class="py-3 px-4">Everton, Manchester United</td>
             <td class="py-3 px-4">Top scorer for club and country</td>
