--- a/LionelMessi.html
+++ b/LionelMessi.html
@@ -132,13 +132,13 @@ Messi is renowned for:
    <li>He is known not just for his individual brilliance but also for his humility, leadership, and loyalty to his teams.</li>
    <li>Messi has influenced generations of players and is often seen as a role model for his professionalism and love for the game.</li>
    <li>His move to Inter Miami in 2023 is set to make a huge impact on football in the United States, further cementing his global legacy.</li>
-   <li><b>Fun Facts:</b></li>
-   <ul>
+</ul>
+<b>Fun Facts:</b>
       <li>Messi is a family man, with a close bond to his wife Antonella Roccuzzo, with whom he has three children: Thiago, Mateo, and Ciro.</li>
       <li>Messi is known for his charity work and founded the Leo Messi Foundation, which works to provide access to education and healthcare for vulnerable children.</li>
       <li>Despite his fame, Messi is very private about his personal life and stays largely out of the spotlight outside of football.</li>
    </ul> <div>
-      <img src="messi.png" height="300" width="300" style=" margin-left: 50px"></div>
+      <img src="messi.png" height="300" width="300" style=" margin-left: 10px"></div>
       <a href="FootballIndex.html" class="back-link">← Back to Football Index</a>
 
 
