--- a/ThierryHenry.html
+++ b/ThierryHenry.html
@@ -31,6 +31,11 @@
     <li>Highly respected football analyst and mentor</li>
   </ul>
 <img src="ThierryHenry.png" alt="Thierry Henry" height="300" width="300" style="margin-left:10px ;"><br>
+<strong>Created by</strong><br>
+<em>VEDANT</em><br>
+<img src="ved.png" alt="VEDANT" height="350" width="300" style="margin: left 50px ;"><br>
+
+
 <a href="FootballIndex.html" class="back-link">←Back to Football Index</a>
 </body>     
 </html>
