--- a/WayneRooney.html
+++ b/WayneRooney.html
@@ -31,6 +31,10 @@
     <li>Highly regarded as one of England’s best players</li>
   </ul>
 <img src="WayneRooney.png" alt="Wayne Rooney" height="300" width="250" style="margin-left:10px ;"><br>
+<strong>Created by</strong><br>
+<em>VEDANT</em><br>
+<img src="ved.png" alt="VEDANT" height="350" width="300" style="margin: left 50px ;"><br>
+
 <a href="FootballIndex.html" class="back-link">←Back to Football Index</a>
 </body>
 </html>
